--- a/ihome/jingtai/html/orders.html
+++ b/ihome/jingtai/html/orders.html
@@ -29,7 +29,7 @@
                 <li order-id={{order.order_id}}>
                     <div class="order-title">
                         <h3>订单编号：{{order.order_id}}</h3>
-                        {{ if 3 == order.status }}
+                        {{ if "WAIT_COMMENT" == order.status }}
                         <div class="fr order-operate">
                             <button type="button" class="btn btn-success order-comment" data-toggle="modal" data-target="#comment-modal">发表评价</button>
                         </div>
@@ -46,20 +46,20 @@
                                 <li>合计金额：￥{{(order.amount/100.0).toFixed(0)}}(共{{order.days}}晚)</li>
                                 <li>订单状态：
                                     <span>
-                                        {{if 0 == order.status}}
+                                        {{if "WAIT_ACCEPT" == order.status}}
                                             待接单
-                                        {{else if 3 == order.status}}
+                                        {{else if "WAIT_COMMENT" == order.status}}
                                             待评价
-                                        {{else if 4 == order.status}}
+                                        {{else if "COMPLETE" == order.status}}
                                             已完成
-                                        {{else if 6 == order.status}}
+                                        {{else if "REJECTED" == order.status}}
                                             已拒单
                                         {{/if}}
                                     </span>
                                 </li>
-                                {{if 4 == order.status}}
+                                {{if "COMPLETE" == order.status}}
                                 <li>我的评价： {{order.comment}}</li>
-                                {{else if 6 == order.status}}
+                                {{else if "REJECTED" == order.status}}
                                 <li>拒单原因： {{order.comment}}</li>
                                 {{/if}}
                             </ul>
@@ -68,7 +68,7 @@
                 </li>
                 {{/each}}
                 {{else}}
-                暂时没有订单。
+                <h3>暂时没有订单。</h3>
                 {{/if}}
             </script>
             <div class="modal fade" id="comment-modal" tabindex="-1" role="dialog" aria-labelledby="comment-label">
